Fixed Navbar overlapping

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,12 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital@0;1&display=swap');
 
+#pseudo{
+	width: 100%;
+	height: 65px;
+}
 .navbar{
 	height:65px;
 	width: 100%;
 	position: fixed;
-	left: 0px;
+	float: left;
+	display: block;
 	top: 0px;
 	box-shadow: 0px 5px 29.4px rgba(0, 0, 0, 0.25);
+	background-color: var(--background);
 
 	display: flex;
 	justify-content: space-between;
@@ -56,9 +62,9 @@
 	right: 10px;
 	width: 200px;
 	height: 250px;
-	background: #080808a8;
+	background: var(--primary-foreground);
 	box-shadow: 5px 5px 4.5px rgba(0, 0, 0, 0.25);
-	backdrop-filter: blur(4px);
+	border: #ffbade59 solid 1px;
 	border-radius: 10px;
 	z-index: 100;
 }
